2008-03-07  Jeremy Cribb <jcribb@email.unc.edu>
	* zerodaq.m: fixed typo (narg -> nargin)

2008-02-28  Jeremy Cribb <jcribb@email.unc.edu>
	* zerodaq.m: added DAQid as a parameter.

2006-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: Removed redundant text output when using the virtual dac board.

2006-08-09  Kalpit Desai <kvdesai@email.unc.edu>
	* DACoperator.m: Fixed several errors in the documentation. Now in sync with the code.
	
2006-07-25  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: added try-catch to contain "out of memory" error, and added another level to signal decimation.  Matlab gets ornery when plots exceed a million points or so.

2006-07-25  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: added decimation of signal sent to the daqtest plot.  Matlab gets ornery when plots exceed a million points or so.  A message is sent to text output warning of the decimation.

2006-07-07  Jeremy Cribb <jcribb@email.unc.edu>
  * DACoperator.m: changed default board to daqtest.  fixed bug in the reporting of active channels.

2006-06-09  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: used try-catch when querying available DAq boards.  Now you can use the "virtual" board on machines that have no DAq boards installed at all.

2006-06-05  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: 
		- changed default number of repeats to zero.  this means the default behavior is to run the input signal once (i.e. no repeats).
		- added repeats to virtual DAC output
		- now reports starting time from clock (as close as possible to start)
	* zerodaq.m:
		- changed default DAq board.

2006-04-25  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: added newline to end of daqtest output.

2006-04-19	Kalpit Desai <kvdesai@email.unc.edu>
	* teststreaks.m: Removed the code that asked to save the data. It wasn't being used ever, and was annoying. Fixed documentation.

2005-10-03	Kalpit Desai <kvdesai@email.unc.edu>